syntax = "proto3";
package outbe.cra;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/mint/v1beta1/mint.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";

import "outbe/cra/cra.proto";

import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/outbe/outbe-node/x/cra/types";

// Query provides defines the gRPC querier service.
service Query {
// QueryParams retrieves the module parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/outbe/cra/params";
  }

  rpc AllCRAs(QueryAllCRAsRequest) returns (QueryAllCRAsResponse) {
    option (google.api.http).get = "/outbe/cra/cras";
  }

  rpc AllWallets(QueryAllWalletsRequest) returns (QueryAllWalletsResponse) {
    option (google.api.http).get = "/outbe/cra/wallets";
  }
}

// QueryParamsRequest is the request type for Params.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for Params.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryAllCRAsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCRAsResponse {
  repeated CRA  cras = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryAllWalletsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryDailyStatsResponse is the response type for DailyStats.
message QueryAllWalletsResponse {
  repeated Wallet  wallets = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}